--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -69,7 +69,7 @@ jobs:
             --project $GCP_PROJECT \
             --region asia-northeast1 \
             --platform managed \
-            --allow-unauthenticated \
+            --no-allow-unauthenticated \
             --quiet
 
       # Firebaseへのデプロイ
